# clipping_ssbd_videos

./: README.md
scripts/: clip_segment_ssbd_video_script.sh  clip_ssbd_video_script.sh  clip_ssbd_video_segments.py  download_ssbd.py  download_ssbd_script.sh
src/: CMakeLists.txt  clip_segment.cpp  clipping.cpp
